@@ -32,12 +32,14 @@ public class LobbyEntity {
     @ElementCollection
     @CollectionTable(name = "lobby_players", schema = "session_service", joinColumns = @JoinColumn(name = "lobby_id"))
     @AttributeOverrides({@AttributeOverride(name = "id", column = @Column(name = "player_id", nullable = false)), @AttributeOverride(name = "username", column = @Column(name = "username", nullable = false)), @AttributeOverride(name = "image", column = @Column(name = "image")), @AttributeOverride(name = "ready", column = @Column(name = "ready", nullable = false))})
-    private Set<PlayerEmbed> players;
+    @OrderBy
+    private List<PlayerEmbed> players;
 
     @ElementCollection
     @CollectionTable(name = "lobby_invited_players", schema = "session_service", joinColumns = @JoinColumn(name = "lobby_id"))
     @Column(name = "invited_player_id", nullable = false)
-    private Set<UUID> invitedPlayerIds;
+    @OrderBy
+    private List<UUID> invitedPlayerIds;
 
     @Embedded
     @AttributeOverrides({@AttributeOverride(name = "id", column = @Column(name = "bot_id")), @AttributeOverride(name = "username", column = @Column(name = "bot_username")), @AttributeOverride(name = "image", column = @Column(name = "bot_image")), @AttributeOverride(name = "ready", column = @Column(name = "bot_ready")), @AttributeOverride(name = "isAi", column = @Column(name = "bot_is_ai"))})
@@ -63,7 +65,7 @@ public class LobbyEntity {
     protected LobbyEntity() {
     }
 
-    public LobbyEntity(UUID id, UUID gameId, UUID ownerId, Set<PlayerEmbed> players, Set<UUID> invitedPlayerIds, LobbySettings settings, LobbyStatus status, Instant createdAt, Instant updatedAt, UUID startedGameId, BotEmbed bot) {
+    public LobbyEntity(UUID id, UUID gameId, UUID ownerId, List<PlayerEmbed> players, List<UUID> invitedPlayerIds, LobbySettings settings, LobbyStatus status, Instant createdAt, Instant updatedAt, UUID startedGameId, BotEmbed bot) {
         this.id = id;
         this.gameId = gameId;
         this.ownerId = ownerId;
@@ -77,32 +79,28 @@ public class LobbyEntity {
         this.bot = bot;
     }
 
-    public static LobbyEntity fromDomain(final Lobby lobby) {
+    public static LobbyEntity from(final Lobby lobby) {
+        List<PlayerEmbed> players = lobby.players().stream().map(player -> new PlayerEmbed(player.id().value(), player.username().value(), player.image(), player.ready())).toList();
+        List<UUID> invited = lobby.invitedPlayers().stream().map(PlayerId::value).toList();
 
-        Set<PlayerEmbed> players = lobby.players().stream().map(player -> new PlayerEmbed(player.id().value(), player.username().value(), player.image(), player.ready())).collect(Collectors.toSet());
-
-        Set<UUID> invited = lobby.invitedPlayers().stream().map(PlayerId::value).collect(Collectors.toSet());
-
-        BotEmbed bot = null;
         if (lobby.hasBot()) {
-            bot = new BotEmbed(lobby.bot().id().value(), lobby.bot().username().value(), lobby.bot().image(), lobby.bot().ready(), lobby.bot().isBot());
+            BotEmbed bot = new BotEmbed(lobby.bot().id().value(), lobby.bot().username().value(), lobby.bot().image(), lobby.bot().ready());
+
+            return new LobbyEntity(lobby.id().value(), lobby.gameId().value(), lobby.ownerId().value(), players, invited, lobby.settings(), lobby.status(), lobby.createdAt(), lobby.updatedAt(), lobby.startedGameId().map(GameId::value).orElse(null), bot);
         }
 
-        return new LobbyEntity(lobby.id().value(), lobby.gameId().value(), lobby.ownerId().value(), players, invited, lobby.settings(), lobby.status(), lobby.createdAt(), lobby.updatedAt(), lobby.startedGameId().map(GameId::value).orElse(null), bot);
+        return new LobbyEntity(lobby.id().value(), lobby.gameId().value(), lobby.ownerId().value(), players, invited, lobby.settings(), lobby.status(), lobby.createdAt(), lobby.updatedAt(), lobby.startedGameId().map(GameId::value).orElse(null), null);
     }
 
-    public Lobby toDomain() {
-        List<Player> domainPlayers = this.players.stream().map(p -> new Player(PlayerId.from(p.id()), PlayerName.from(p.username()), p.image(), p.ready())).collect(Collectors.toList());
+    public Lobby to() {
+        List<Player> players = this.players.stream().map(player -> new Player(PlayerId.from(player.id()), PlayerName.from(player.username()), player.image(), player.ready())).toList();
+        Set<PlayerId> invited = invitedPlayerIds.stream().map(PlayerId::from).collect(Collectors.toSet());
 
-        Set<PlayerId> invited = this.invitedPlayerIds.stream().map(PlayerId::from).collect(Collectors.toSet());
+        Lobby lobby = new Lobby(LobbyId.from(id), GameId.from(gameId), PlayerId.from(ownerId), players, invited, settings, status, createdAt, updatedAt, startedGameId == null ? null : GameId.from(startedGameId));
 
-        Lobby lobby = new Lobby(LobbyId.from(id), GameId.from(gameId), PlayerId.from(ownerId), domainPlayers, invited, settings, status, createdAt, updatedAt, startedGameId == null ? null : GameId.from(startedGameId));
+        if (bot == null) return lobby;
 
-        if (this.bot != null) {
-            Player bot = Player.bot(PlayerId.from(this.bot.id()), PlayerName.from(this.bot.username()), this.bot.image());
-            lobby.addBot(lobby.ownerId(), bot);
-        }
-
+        lobby.addBot(lobby.ownerId(), Player.bot(PlayerId.from(bot.id()), PlayerName.from(bot.username()), bot.image()));
         return lobby;
     }
 
@@ -118,7 +116,7 @@ public class LobbyEntity {
         return ownerId;
     }
 
-    public Set<PlayerEmbed> players() {
+    public List<PlayerEmbed> players() {
         return players;
     }
 
@@ -134,11 +132,11 @@ public class LobbyEntity {
         return startedGameId;
     }
 
-    public BotEmbed aiPlayer() {
+    public BotEmbed bot() {
         return bot;
     }
 
-    public Set<UUID> invitedPlayerIds() {
+    public List<UUID> invitedPlayerIds() {
         return invitedPlayerIds;
     }
 }
